# Mavrith

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ai-workflow.html  core-concepts.html  examples.html  index.html
docs/assets/: styles.css
examples/: __init__.py  aircraft_pitch_digital.py  closed_loop.py  cruise_control.py  cstr_temperature_control.py  export_water_cooling_manifest.py  inverted_pendulum_lqr.py  large_hierarchical_benchmark.py  mass_spring_damper.py  multirate_offset_priority.py  quadruple_tank.py  vehicle_path_tracking.py  water_cooling.py
src/mavrith/: __init__.py  _manifest.py  diagnostics.py  errors.py  simulation.py  solver.py  system.py
src/pylink/: __init__.py  _hierarchy.py  _manifest.py  _model.py  compiler.py  core.py  diagnostics.py  errors.py  simulation.py  system.py
tests/: subsystem_helpers.py  test_build.py  test_compile.py  test_examples.py  test_examples_manifest.py  test_manifest.py  test_multirate.py  test_observer.py  test_runtime.py  test_signal_spec.py  test_subsystem_build.py  test_subsystem_flatten.py  test_subsystem_performance.py  test_subsystem_runtime.py  test_subsystem_summary.py  test_subsystem_validate.py  test_validate.py
